# beGAN

./: CMakeLists.Files.txt  CMakeLists.txt  README.md  sln.bat
src/: CommonDefinitions.h  RandomWarpedImage.h  TData.cpp  TData.h  TDataset.cpp  TDataset.h  TFaceDetector.h  TFacesDataset.cpp  TFacesDataset.h  TIndexedObjects.h  TMnistDataset.h  TMxDNNScheduler.h  TMxDNNTrainer.h  TMxGANTrainer.h  TRandomDouble.h  TRandomInt.h  WriteToLog.h  main.cpp  model_executor.cpp  model_executor.h  resnet_mx.h
